@@ -1,3 +1,8 @@
+2005-05-06  Douglas Bates  <bates@bates1-home>
+
+	* src/dgeMatrix.c (dgeMatrix_colsums): Added an implementation of
+	colMeans, colSums, rowMeans and rowSums.
+
 2005-04-18  Douglas Bates  <bates@bates1-home>
 
 	* src/lgCMatrix.[ch]: code for _validate method and stub for
